# Nolara

./: .gitignore  MANIFEST.in  README.md  build.bash  config.json  gui.py  main.py  requirements  requirements.txt  setup.cfg  system_prompts  textual.css  textual.tcss  tools  tui.py
app/: NolaraCore.py  config.json  requirements-audio.txt  requirements-base.txt  textual.tcss  tui.py
app/configuration/: default_config.json
app/lib/: Agents.py  Audio.py  ChatBase.py  ChatOllama.py  ChatOpenAI.py  Chatbot.py  Config.py  Models.py  Prompts.py  Tools.py
app/lib/system_prompts/: basic.txt
app/lib/tools/: basic.py  micros_tools.py
app/requirements/: requirements-base.txt
lib/: Agents.py  Audio.py  Chatbot.py  Models.py  Simple.py  Tools.py
nolara/: NolaraCore.py  main.py  tui.py  user_links.py
nolara/configuration/: default_config.json
nolara/configuration/micros_tool_inputs/: COPY_HERE_THE_device_conn_cache.json
nolara/lib/: Agents.py  ChatOllama.py  ChatOpenAI.py  Models.py  Tools.py  Wake.py
nolara/lib/system_prompts/: short.txt  tools.txt
nolara/lib/tools/: _micrOSClient.py  _micrOS_common.py  micros_tools.py  websearch.py
nolara/lib/tools/micros_interface/: _micrOSClient.py  _micrOS_common.py
nolara/requirements/: requirements-base.txt
