[metadata]
name = nolara
version = 0.1.0
description = Modular AI Assistant with TUI
long_description = file: README.md
long_description_content_type = text/markdown
author = Marcell Ban
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    # Source: nolara/requirements/requirements-base.txt
    ollama
    openai
    requests
    textual

[options.package_data]
nolara =
    nolara/configuration/default_config.json
    nolara/lib/system_prompts/*.txt
    nolara/textual.tcss

[options.entry_points]
console_scripts =
    nolara = nolara.main:main

